# mtlbvh

./: .gitignore  README.md  pyproject.toml  setup.py
mtlbvh/: __init__.py  bvh.py
src/: bvh_build.cpp  bvh_build.h  bvh_types.h  ext.mm  metal_bvh.h  metal_bvh.mm
src/metal/: bvh.metal
tests/: bench_dtype.py  bench_mps.py  test_bvh.py  test_dtype_parity.py
