[build-system]
requires = ["setuptools", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtlbvh"
version = "0.1.0"
description = "Metal-accelerated BVH for distance queries and ray tracing on Apple Silicon"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0"]
